--- a/src/views/admin_page.ejs
+++ b/src/views/admin_page.ejs
@@ -10,15 +10,12 @@
             <thead class="text-center text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
                 <tr>
                     <th scope="col" class="px-6 py-3">
-                        Number
-                    </th>
-                    <th scope="col" class="px-6 py-3">
                         Shop name
                     </th>
                     <th scope="col" class="px-6 py-3">
                         Service charge
                     </th>
-                    <th scope="col" class="px-6 py-3">
+                    <!-- <th scope="col" class="px-6 py-3">
                         number of products
                     </th>
                     <th scope="col" class="px-6 py-3">
@@ -26,74 +23,23 @@
                     </th>
                     <th scope="col" class="px-6 py-3">
                       Status
-                    </th>
+                    </th> -->
                 </tr>
             </thead>
             <tbody>
-                <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
-                    <th scope="row" class=" text-center px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                        1
-                    </th>
-                    <td class="text-center px-6 py-4">
-                        Khoi
-                    </td>
-                    <td class=" text-center px-6 py-4">
-                        5%
-                    </td>
-                    <td class=" text-center px-6 py-4">
-                        3
-                    </td>
-                    <td class=" text-center px-6 py-4">
-                        <button type="button" class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Delete</button>
-                    </td>
-                     <td class=" text-center px-6 py-4">
-                         <span class="p-1.5 text-xs font-medium uppercase tracking-wider text-red-500 bg-red-600 rounded-lg bg-opacity-50">Deactive</span>
-                    </td>
-    
-    
-                </tr>
-                <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
-                    <th scope="row" class=" text-center px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                        2
-                    </th>
-                    <td class="text-center px-6 py-4">
-                        Khang
-                    </td>
-                    <td class=" text-center px-6 py-4">
-                        3%
-                    </td>
-                    <td class=" text-center px-6 py-4">
-                        6
-                    </td>
-                    <td class=" text-center px-6 py-4">
-                         <button type="button" class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Delete</button>
-                    </td>
-    
-                    <td class=" text-center px-6 py-4">
-                         <span class="p-1.5 text-xs font-medium uppercase tracking-wider text-green-600 bg-green-500 rounded-lg bg-opacity-50">Active</span>
-                    </td>
-                </tr>
-                <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
-                    <th scope="row" class=" text-center px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                        3
-                    </th>
-                    <td class=" text-center px-6 py-4">
-                        Quan
-                    </td>
-                    <td class=" text-center px-6 py-4">
-                        5%
-                    </td>
-                    <td class=" text-center px-6 py-4">
-                        5
-                    </td>
-                    <td class=" text-center px-6 py-4">
-                        <button type="button" class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Delete</button>
-                    </td>
-    
-                    <td class=" text-center px-6 py-4">
-                         <span class="p-1.5 text-xs font-medium uppercase tracking-wider text-red-500 bg-red-600 rounded-lg bg-opacity-50">Deactive</span>
-                    </td>
-                </tr> 
+                <% vendorsList.forEach(vendor => { %>
+                  <tr>
+                    <td data-label="Shop name"><%=  vendor.businessName %></td>
+                    <td data-label="Service charge"><input type="text" id="first_name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required /></td>
+                    <!-- <td data-label="Number of products" >
+                        <% productsList.forEach(product => { %>
+                          <%= product.length %>
+                        <% }) %>
+                      </td>
+                    <td data-label="Cancel"><%= vendor.businessName %></td>
+                    <td data-label="Status"><%= vendor.businessName %></td> -->
+                    </tr>
+                <% }) %>
             </tbody>
         </table>
     </main>
